# ElanorBot-Archive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  alias.json  bot_config.json  client_config.json  config.json  meta.json  meta_data.json  test.cpp
.cache/clangd/index/: Activity.hpp.2A2AD37C0F4D5DBF.idx  Answer.cpp.880177D53A38EF11.idx  Answer.hpp.6350F6A59BFA527F.idx  AppMessage.hpp.0643B894D8E6F6F4.idx  AtAllMessage.hpp.D9D4A36D30C3A82A.idx  AtBot.cpp.5BB2D4B8BE92342E.idx  AtBot.hpp.E652100418A11F91.idx  AtMessage.hpp.195419F116A5C8E4.idx  Bililive.cpp.D4E483F3594B100E.idx  Bililive.hpp.0E6302133BAFC709.idx  BililiveList.hpp.AEA860BE3748930E.idx  (+157 more)
Elanor/: CMakeLists.txt
Elanor/App/: CMakeLists.txt  ElanorBot.cpp  ElanorBot.hpp  main.cpp
Elanor/Client/: CMakeLists.txt  Client.cpp  Client.hpp
Elanor/Command/: Answer.cpp  Answer.hpp  AtBot.cpp  AtBot.hpp  Bililive.cpp  Bililive.hpp  CMakeLists.txt  Command.hpp  GroupCommandBase.hpp  Recall.cpp  Recall.hpp  Repeat.cpp  Repeat.hpp  RollDice.cpp  RollDice.hpp  Sing.cpp  Sing.hpp
Elanor/Command/admin/: AdminCommand.hpp  BlackList.cpp  BlackList.hpp  CMakeLists.txt  CommandAuth.cpp  CommandAuth.hpp  SetAuth.cpp  SetAuth.hpp  SetTrigger.cpp  SetTrigger.hpp  WhiteList.cpp  WhiteList.hpp
Elanor/Command/image/: CMakeLists.txt  Choyen.cpp  Choyen.hpp  ImageCommand.hpp  ImageSearch.cpp  ImageSearch.hpp  Petpet.cpp  Petpet.hpp  Pixiv.cpp  Pixiv.hpp  Saucenao.cpp  Saucenao.hpp
Elanor/Command/pjsk/: CMakeLists.txt  PjskCommand.hpp  pjskChart.cpp  pjskChart.hpp  pjskCoverGuess.cpp  pjskCoverGuess.hpp  pjskMusicInfo.cpp  pjskMusicInfo.hpp  pjskSongGuess.cpp  pjskSongGuess.hpp  pjskUpdate.cpp  pjskUpdate.hpp
Elanor/Group/: CMakeLists.txt  Group.cpp  Group.hpp  GroupList.cpp  GroupList.hpp
Elanor/State/: AccessCtrlList.cpp  AccessCtrlList.hpp  Activity.cpp  Activity.hpp  BililiveList.cpp  BililiveList.hpp  CMakeLists.txt  CommandPerm.cpp  CommandPerm.hpp  CoolDown.cpp  CoolDown.hpp  LastMessage.cpp  LastMessage.hpp  State.hpp  StateBase.hpp  TriggerStatus.cpp  TriggerStatus.hpp
Elanor/Trigger/: BililiveTrigger.cpp  BililiveTrigger.hpp  CMakeLists.txt  CronTriggerBase.hpp  LoopTriggerBase.hpp  MorningTrigger.cpp  MorningTrigger.hpp  Trigger.hpp  TriggerBase.hpp
Elanor/Utils/: CMakeLists.txt  Factory.hpp  MessageQueue.cpp  MessageQueue.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp
Elanor/app/: CMakeLists.txt  ElanorBot.cpp  ElanorBot.hpp  main.cpp
Elanor/mirai-cpp/include/mirai/: SessionOptions.hpp
Elanor/mirai-cpp/include/mirai/messages/: VoiceMessage.hpp
Elanor/mirai-cpp/src/: MiraiBot.cpp  SessionOptions.cpp
PythonServer/: Config.py  ConfigTemplate.py  Server.py  log_conf.json  pjsk.py  requirements.txt
PythonServer/Routers/: Generate.py  Image.py  ImageSearch.py  Pixiv.py  Pjsk.py
PythonServer/Utils/: Clients.py
TestServer/: Server.py  requirements.txt
bot/: 88888888
include/: Common.hpp  ElanorBot.hpp  MessageQueue.hpp  Timer.hpp  Utils.hpp
include/Command/: Answer.hpp  AtBot.hpp  Bililive.hpp  Command.hpp  GroupCommandBase.hpp  Recall.hpp  Repeat.hpp  RollDice.hpp  WhiteList.hpp
include/State/: Activity.hpp  BililiveList.hpp  CoolDown.hpp  LastMessage.hpp  State.hpp  StateBase.hpp
include/Trigger/: BililiveTrigger.hpp  CronTriggerBase.hpp  LoopTriggerBase.hpp  MorningTrigger.hpp  Trigger.hpp  TriggerBase.hpp
include/utils/: httplib.hpp
silk2mp3/: decoder  encoder
src/: Common.cpp  ElanorBot.cpp  MessageQueue.cpp  Recall.cpp  Timer.cpp  Utils.cpp  main.cpp
src/Command/: Answer.cpp  AtBot.cpp  Bililive.cpp  Recall.cpp  Repeat.cpp  RollDice.cpp  WhiteList.cpp
src/Trigger/: BililiveTrigger.cpp  MorningTrigger.cpp
(+41 files in other folders)
